--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,8 @@
         "memory_resource": "cpp",
         "utility": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "__verbose_abort": "cpp",
+        "charconv": "cpp"
     }
 }
